k8s/development.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deploy
  labels:
    app: portfolio-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio-deploy
  template:
    metadata:
      labels:
        app: portfolio-deploy
    spec:
      containers:
      - name: portfolio-deploy
        image: parthsinhawcl/portfolio:latest
        ports:
        - containerPort: 3000
