k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: portfolio-deploy
