k8s/argo-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure # Include this if you want HTTPS
  routes:
    - match: Host(`argo.pksinha.co.uk`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: your-tls-secret # Replace with your actual TLS secret name
