k8s/argo-porfolio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Specify the ingress class
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: argo.pksinha.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 8080  # Use the internal port of the service
